--- a/.github/workflows/e2e.installer-action.yml
+++ b/.github/workflows/e2e.installer-action.yml
@@ -6,10 +6,13 @@ on:
 permissions: read-all
 
 jobs:
-  test-install:
-    strategy:
-      matrix:
-        ref: ['v1.4.0', 'e6428d7da594455a4c2b7f24907fec421a5e0e95', 'v1.4.1', 'e6428d7da594455a4c2b7f24907fec421a5e0e95']
+  test-tags:
     runs-on: ubuntu-latest
     steps:
-      - uses: slsa-framework/slsa-verifier/actions/installer@${{ matrix.ref }}
+      - uses: slsa-framework/slsa-verifier/actions/installer@v1.4.0
+      - uses: slsa-framework/slsa-verifier/actions/installer@v1.4.1
+  test-hashes:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: slsa-framework/slsa-verifier/actions/installer@936dc46aca3ed973d542a09d2a9d890705ce5011
+      - uses: slsa-framework/slsa-verifier/actions/installer@e6428d7da594455a4c2b7f24907fec421a5e0e95
