--- a/.github/workflows/e2e.installer-action.yml
+++ b/.github/workflows/e2e.installer-action.yml
@@ -10,7 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: kpk47/slsa-verifier/actions/installer@v0.0.17
+        with: 
+          github-token: ${{ secrets.GITHUB_TOKEN }}
   test-hash:
     runs-on: ubuntu-latest
     steps:
       - uses: kpk47/slsa-verifier/actions/installer@a53b192e5b6649594c6441bcf3ce70f871d4e1d5
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
